[gd_scene load_steps=12 format=3 uid="uid://cou56433irj5y"]

[ext_resource type="Texture2D" uid="uid://cbe2t5hldn12a" path="res://Textures/RainGameEntitiesTiles.png" id="1_5cfqk"]
[ext_resource type="Script" uid="uid://ct1kd1qlir6wl" path="res://MeleeScript.gd" id="2_6mlys"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0sbvl"]
atlas = ExtResource("1_5cfqk")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfq4p"]
atlas = ExtResource("1_5cfqk")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge8k0"]
atlas = ExtResource("1_5cfqk")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq11u"]
atlas = ExtResource("1_5cfqk")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ah1jp"]
atlas = ExtResource("1_5cfqk")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35xfh"]
atlas = ExtResource("1_5cfqk")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gk6ux"]
atlas = ExtResource("1_5cfqk")
region = Rect2(192, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_qclva"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0sbvl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfq4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge8k0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq11u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ah1jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35xfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gk6ux")
}],
"loop": false,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_clmoc"]
size = Vector2(8, 20)

[node name="MeleeNode" type="AnimatedSprite2D"]
sprite_frames = SubResource("SpriteFrames_qclva")
autoplay = "default"
frame = 3
script = ExtResource("2_6mlys")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(10, -2)
shape = SubResource("RectangleShape2D_clmoc")

[connection signal="animation_finished" from="." to="." method="_on_animation_finished"]
[connection signal="frame_changed" from="." to="." method="_on_frame_changed"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
